<resources>
    <string name="app_name">Wumpus Hunt</string>
    <string name="title_activity_help_scrolling">HelpScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="author">
        © 2021 by Christian Fischer \ninspired by Codenautics
    </string>

    <string name="help_text_intro">
       " Welcome to Wumpus Hunt, the amazing mobile game! \n\n"
        "In this adventure, you slip into the role of a rifle equipped hunter lost in a cave and hunting down the Wumpus, a hideous, man-eating creature. The cave is randomly generated and composed of tiles representing either passable floors, or impassable walls. Select one of the three buttons at the bottom to choose an activity to perform. Swiping in a specific direction commands the hunter to act respectively. A "Blast" command towards a wall will automatically use one of your three sticks of dynamite and blow it up. This way you can change walls into floors to move along - as long as you have dynamite left."
    </string>

    <string name="help_text_wumpus">
        "On a tile somewhere in this cave there is the Wumpus hiding. Accidentally entering its tile will lead to a cruel death by getting eaten. Fortunately, the Wumpus has one great weakness: It stinks. The stench is so noticeable that you can smell it over two tiles distance. If you think, you have detected the exact spot of the Wumpus, you can prepare to shoot it. To do so, first you have to move to a spot adjacent to your target tile. Rifle shots only have a range of one tile. Next, you need to select the "SHOOT" mode via the buttons below. While in "SHOOT" mode, swiping will command the hunter to fire his gun in the respective direction. Note, that you have only one chance to shoot the Wumpus. Missing it will attract it to your position and kill you."
    </string>

    <string name="help_text_river">
        "Throughout the map there are several special locations spread, that lead to specific events. Most of them are announced by smaller symbols one tile around them. \n\n"
        "The river: Falling into the river will lead to a loud splash noise. This will attract the Wumpus a certain number of tiles nearer to you (respective to the current level). The same effect happens, if you use one of your dynamite sticks. Of course, the Wumpus can only reach you, if there is a passable route to you. It cannot pass through the wall/floor tile blown up in the current turn."
    </string>

    <string name="help_text_bat">
        "The bat: A giant bat will catch you, fly you around and let you fall somewhere on a random floor tile. This can also be a currently impassable spot."
    </string>

    <string name="help_text_spider">
        "The spider web: During the game you have a time limit to slay the Wumpus. After a certain amount of steps your light will go out, which also is your certain death. Entering the spot with the giant spiderweb will cost you a lot of time struggling to free yourself. This will cut your light reserves in half."
    </string>

    <string name="help_text_rock">
        "The giant rock: The giant rock will just crush you directly to death. So be cautious about the smaller stone falls around it."
    </string>

    <string name="help_text_outro">
        "Taking those rules into account and with a little luck, you should be able to slay your first Wumpus. After success, the game will restart in the next level. The level number determines the Wumpus’ moving range in number of tiles."
        "Have fun!"
    </string>

    <string name = "version">
        v0.8
    </string>

</resources>
