<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wumpus_jungle">
    tools:context=".AboutActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6FFFFFF"
                android:gravity="center"
                android:text="Wumpus Hunt"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="Wumpus Hunt" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6FFFFFF"
                android:gravity="fill"
                android:text="@string/help_text_intro"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/help_text_intro" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/screen_intro" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6FFFFFF"
                android:gravity="fill"
                android:text="@string/help_text_wumpus"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/help_text_wumpus" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/screen_wumpus" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6FFFFFF"
                android:gravity="fill"
                android:text="@string/help_text_river"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/help_text_river" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/screen_water" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6FFFFFF"
                android:gravity="fill"
                android:text="@string/help_text_bat"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/help_text_bat" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/screen_bat" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6FFFFFF"
                android:gravity="fill"
                android:text="@string/help_text_spider"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/help_text_spider" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/screen_spider" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6FFFFFF"
                android:gravity="fill"
                android:text="@string/help_text_rock"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/help_text_rock" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/screen_rock" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6FFFFFF"
                android:gravity="fill"
                android:text="@string/help_text_outro"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/help_text_outro" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:onClick="sendMessageBack"
                android:text="OK"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>